Automatic: switch expressions, pattern matching, SequencedCollections